Break up the main file into parts, so that compiling doesn't take forever

--- a/references.bib
+++ b/references.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for JT Paasch at 2025-10-29 11:32:41 -0400 
+%% Created for JT Paasch at 2025-11-09 12:11:00 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -148,13 +148,14 @@
 	author = {Varzi, Achille},
 	booktitle = {The Stanford Encyclopedia of Philosophy},
 	date-added = {2025-10-29 09:15:56 -0400},
-	date-modified = {2025-10-29 11:29:21 -0400},
+	date-modified = {2025-11-09 12:10:45 -0500},
 	editor = {Zalta, Edward},
 	lastchecked = {October 2025},
 	publisher = {Stanford University},
 	title = {Mereology},
 	url = {https://plato.stanford.edu/archives/spr2011/entries/mereology/},
-	urldate = {2011}}
+	urldate = {2011},
+	year = {2011}}
 
 @book{Simons:1987,
 	address = {Oxford, UK},
