Adding a few references

--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,85 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for JT Paasch at 2025-11-09 12:11:00 -0500 
+%% Created for JT Paasch at 2025-11-11 05:59:09 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{LeonardAndGoodman:1940,
+	author = {Leonard, Henry and Goodman, Nelson},
+	date-added = {2025-11-11 05:58:19 -0500},
+	date-modified = {2025-11-11 05:59:04 -0500},
+	journal = {The Journal of Symbolic Logic},
+	pages = {45-55},
+	title = {The Calculus of Individuals and Its Uses},
+	volume = {5},
+	year = {1940}}
+
+@article{Rescher:1955,
+	author = {Rescher, Nicholas},
+	date-added = {2025-11-11 05:54:39 -0500},
+	date-modified = {2025-11-11 05:56:05 -0500},
+	journal = {Philosophical Studies},
+	pages = {8-11},
+	title = {Axioms for the Part Relation},
+	volume = {6},
+	year = {1955}}
+
+@incollection{Tarski:1986,
+	address = {Basel},
+	author = {Tarski, Alfred},
+	booktitle = {Alfred Tarski: Collected Papers, Volume 1: 1921-1934},
+	date-added = {2025-11-11 05:47:54 -0500},
+	date-modified = {2025-11-11 05:50:10 -0500},
+	editor = {Givant, Steven and McKenzie, Ralph},
+	pages = {225-232},
+	publisher = {Birkh\"{a}user},
+	title = {Les fondements de la g\'{e}ometrie des corps},
+	year = {1986}}
+
+@incollection{Tarski:1956,
+	address = {Oxford, UK},
+	author = {Tarski, Alfred},
+	booktitle = {Logic, Semantics, Metamathematics},
+	date-added = {2025-11-11 05:46:14 -0500},
+	date-modified = {2025-11-11 05:47:48 -0500},
+	editor = {Woodger, J. H.},
+	pages = {24-29},
+	publisher = {Clarendon Press},
+	title = {Foundations of the Geometry of Solids},
+	year = {1956}}
+
+@inproceedings{FongMyersAndSpivak:2020,
+	author = {Fong, Brendan and Myers, David Jaz and Spivak, David},
+	booktitle = {Proceedings of the 3rd Annual International Applied Category Theory Conference 2020 (ACT2020)},
+	date-added = {2025-11-11 05:26:42 -0500},
+	date-modified = {2025-11-11 05:32:47 -0500},
+	editor = {Spivak, David and Vicary, Jamie},
+	title = {Behavioral Mereology: A Modal Logic for Passing Constraints},
+	year = {2020}}
+
+@incollection{Vickers:2007,
+	author = {Steven Vickers},
+	booktitle = {Handbook of Spatial Logics},
+	date-added = {2025-11-11 05:14:14 -0500},
+	date-modified = {2025-11-11 05:18:23 -0500},
+	editor = {Aiello, Marco and Pratt-Hartmann, Ian and van Benthem, Johan},
+	pages = {429-496},
+	publisher = {Springer},
+	title = {Locales and Toposes as Spaces},
+	year = {2007}}
+
+@book{Vickers:1989,
+	address = {Cambridge, UK},
+	author = {Steven Vickers},
+	date-added = {2025-11-11 05:03:06 -0500},
+	date-modified = {2025-11-11 05:04:32 -0500},
+	publisher = {Cambridge University Press},
+	title = {Topology Via Logic},
+	year = {1989}}
 
 @book{McLarty:1992,
 	address = {Oxford, UK},
