--- a/submission-part-1.tex
+++ b/submission-part-1.tex
@@ -302,13 +302,13 @@ To our mind, the fact that these benefits come for free offers a compelling reas
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Literature}
 
-The literature on mereology is vast. What we might think of as formal mereology (axiomatized systems) goes back at least to Le\'{s}niewski's system called ``Mereology'' [cite] and Leonard and Goodman's ``Calculus of Individuals'' [cite], along with other contributions by Whitehead [cite], Tarski [cite], and others. Surveys of the resulting literature and ideas can be found in the now standard works by Simons and others (e.g. \cite{Simons:1987}, \cite{Varzi:2011}, or \cite{CotnoirAndVarzi:2021}).
+The literature on mereology is vast. What we might think of as formal mereology (axiomatized systems) goes back at least to Le\'{s}niewski's system called ``Mereology'' [cite] and Leonard and Goodman's ``Calculus of Individuals'' (\cite{LeonardAndGoodman:1940} and \cite{Goodman:1977}), along with other contributions by Whitehead [cite], Tarski (\cite{Tarski:1986} and \cite{Tarski:1956}), Rescher (\cite{Rescher:1955}), and others. Surveys of the resulting literature and ideas can be found in the now standard works by Simons and others (e.g. \cite{Eberle:1970}, \cite{Simons:1987}, \cite{Varzi:2011}, or \cite{CotnoirAndVarzi:2021}).
 
 Topological concepts have been used in mereology for a long time (see the historical coverage and discussion in \cite{Simons:1987}). So-called ``mereotopology'' explicitly aims to characterize mereological questions in topological ways, especially using notions like boundaries, interiors, and connectedness. A standard introduction to modern mereotopology is \cite{CasatiAndVarzi:1999}.
 
-However, despite its heavy reliance on topology, mereotopology has not (to our knowledge) utilized sheaf-theory in any significant way (nor has classical mereology). TODO: discuss Spivak's behavioral mereology/seven-sketches/temporal type theory (\cite{SchultzAndSpivak:2019}, Moltmann's trope sheaves, Moltmann's mereology.
+However, despite its heavy reliance on topology, mereotopology has not (to our knowledge) utilized sheaf-theory in any significant way (nor has classical mereology). TODO: discuss Spivak's behavioral mereology/temporal type theory (\cite{FongMyersAndSpivak:2020}, \cite{SchultzAndSpivak:2019}), Moltmann's trope sheaves, Moltmann's mereology.
 
-For sheaves, see \cite{Tennison:1975}, \cite{MacLaneAndMoerdijk:1994}, \cite{Rosiak:2022}, or \cite{Wedhorn:2016}.
+For sheaves, see \cite{Tennison:1975}, \cite{MacLaneAndMoerdijk:1994}, \cite{Rosiak:2022}, or \cite{Wedhorn:2016}. For locales, see \cite{Johnstone:1982}, \cite{Vickers:1989}, \cite{Vickers:2007}, \cite{PicadoAndPultr:2012}.
 
 For toposes, see \cite{Goldblatt:1984}, \cite{McLarty:1992}, \cite{Borceux:1994}, \cite{MacLaneAndMoerdijk:1994}, \cite{LawvereAndSchanuel:1997}. TODO: discuss the idea of ``deriving'' the logic from the underlying structure, rather than ``inventing'' it axiomatically. Perhaps Moltmann's mereology is to be cited here.
 
