--- a/submission-part-1.tex
+++ b/submission-part-1.tex
@@ -195,7 +195,7 @@ Third, classicists adopt the following principle that governs how parts fuse int
 
 \end{itemize}
 
-Classicists also require (either as an explicit axiom or as a consequence of the other axioms) some version of extensionality (TODO: consult Contoir's article on this and maybe cite it):
+Classicists also require (either as an explicit axiom or as a consequence of the other axioms) some version of extensionality: \todo{consult Contoir's article on this and maybe cite it}
 
 \begin{itemize}
 
@@ -217,13 +217,13 @@ At first sight, most of the classicist's principles can feel deeply intuitive. H
 
 A standard response is to point out that this sort of objection exploits an ambiguity: we utilize different, more specialized notions of ``parthood'' when we talk about the integration of the parts of biological organisms vs. those of orchestras. My appendix is a part of me under one description (as a part of a biological organism), while I am a part of the orchestra under another (as a member of a musical ensemble). 
 
-Defenders of the classical axioms have said that the fact that we can partition the general notion of parthood into more specialized versions only shows that the above axioms do in fact characterize a general notion of parthood, characterized precisely by the above classical notions (TODO: cite Simons, Varzi, etc).
+Defenders of the classical axioms have said that the fact that we can partition the general notion of parthood into more specialized versions only shows that the above axioms do in fact characterize a general notion of parthood, characterized precisely by the above classical notions. \addcite{Simons, Varzi, etc}
 
-However, one can't help but feel that there is something circular about this response, since it turns on the assumption that the different notions of functional unity are species (or determinations, or partitions, or what have you) of a more generic relation. But the existence of that generic relation hasn't been established, and there is no reason to think that mereological pluralism isn't correct --- namely, that there are many parthood relations, not one (TODO: cite Fine, etc.).
+However, one can't help but feel that there is something circular about this response, since it turns on the assumption that the different notions of functional unity are species (or determinations, or partitions, or what have you) of a more generic relation. But the existence of that generic relation hasn't been established, and there is no reason to think that mereological pluralism isn't correct --- namely, that there are many parthood relations, not one. \addcite{Fine, etc.}
 
 Another common objection to the classical approach revolves around composition principles. In particular, if we adopt unrestricted fusion, as the classical mereologist does, then we seem to get too many fusions. For instance, take the pencil on the table in front of me and your left knee. Are we really to believe that there is a fusion of that pencil and your left knee? Such a fusion would have two parts that live quite far apart (possibly even on different sides of the globe). 
 
-Defenders of the classical approach do have a response though: just because we may not have a word or concept that names the pencil+knee fusion, that doesn't mean it doesn't exist. (TODO: cite Varzi, etc.) Indeed, just as Moore attempt to show that extramental things exist by holding up his two hands and saying, ``Here is one hand, here is the other,'' so too might one try to show that the pencil+knee fusion exists by saying, ``there is the pencil, there is the knee.''
+Defenders of the classical approach do have a response though: just because we may not have a word or concept that names the pencil+knee fusion, that doesn't mean it doesn't exist. \addcite{Varzi, etc.} Indeed, just as Moore attempt to show that extramental things exist by holding up his two hands and saying, ``Here is one hand, here is the other,'' so too might one try to show that the pencil+knee fusion exists by saying, ``there is the pencil, there is the knee.''
 
 Again though, one can't help but feel that there is something circular about this response. To appeal to the pencil+knee's fusion after its fused-ness has been questioned just brings the principle under scrutiny back into the mix. A better response would provide an independent reason to think that pencil+knee qualifies as more than a ``mere Cambridge'' fusion.
 
@@ -233,11 +233,11 @@ For example, the reason it seems wrong to say my appendix is not part of the orc
 
 That leads to the following question: if we have ambient intuitions about which collections count as fusions and which ones don't, then why not take a ``fusions-first'' approach to mereology? Instead of taking parthood as the primitive relation, and then try to work up to a notion of fusions, why not take fusions as the primitive relation, and then work backwards to parts?
 
-Such an approach is far less common in the technical mereological literature. That raises yet another question: why has the ``fusions-first'' approach been so neglected? One proposal is that it might seem to be too unwieldy. One might say that there are just too many different ways that things can integrate into wholes/fusions, and so it is a hopeless task to try and enumerate them and offer any sort of a unifying taxonomy. (TODO: Cite Simons.)
+Such an approach is far less common in the technical mereological literature. That raises yet another question: why has the ``fusions-first'' approach been so neglected? One proposal is that it might seem to be too unwieldy. One might say that there are just too many different ways that things can integrate into wholes/fusions, and so it is a hopeless task to try and enumerate them and offer any sort of a unifying taxonomy. \addcite{Simons}.
 
 Another reason might be that such a view would be inelegant and perhaps would even fail to qualify as an ``explanation'' of the part-whole phenomenon altogether. If you ask me to explain why various $X$s seem to exhibit the same (or sufficiently similar) properties, it would be quite dissatisfying if I said, ``that's easy, there is no unifying explanation.'' 
 
-TODO: remove/rewrite these last two paragraphs. The ``fusions-first'' approach is not so uncommon in the literature as I just made it out to be. Mereotopology exists as a branch of hereology, for all intensive purposes, precisely because it is the fusions-first response to the classical parts-first approach. Cite Casati and Varzi, chapter 3 and others.
+\todo{remove/rewrite these last two paragraphs.} The ``fusions-first'' approach is not so uncommon in the literature as I just made it out to be. Mereotopology exists as a branch of hereology, for all intensive purposes, precisely because it is the fusions-first response to the classical parts-first approach. Cite Casati and Varzi, chapter 3 and others.
 
 Fortunately, a ``fusions-first'' approach need not be as doomed as it may seem. In this paper, we claim that there is a satisfying ``fusions-first'' approach to mereology, and we present it in what follows. To accomplish this, we will build a bridge between category theory and philosophy. In particular, we will take well-known techniques used to manage the gluing-together of parts in algebraic geometry and topos theory, and we will apply those techniques to the realm of mereology.
 
@@ -249,13 +249,13 @@ To begin, we want to suggest that it is useful to draw a distinction between wha
 
 However, it only \emph{nearly} yields a complete lattice because mereologists have been relunctant to allow a bottom element. Since mereologists are ontologists, they find a null element to be ontologically suspect. And indeed, what could an empty thing that is part of all other things possibly \emph{be}? So, instead of admitting it into their mereological systems, classical mereologists have simply omitted it altogether. David Lewis (\cite{Lewis:1991}) even went so far as to formulate a version of set theory that had no empty set. 
 
-Yet despite their suspicion of a null element, classical mereologists have not shied away from allowing all possible fusions to exist, as noted already. Since the bottom element of a lattice is the empty join, we can put the point like this: classical mereologists are ontologically conservative about empty joins, and ontologically permissive about non-empty joins. As Tarski pointed out long ago, the principles of classical mereology thus yield a boolean algebra, with the bottom element removed (TODO: cite).
+Yet despite their suspicion of a null element, classical mereologists have not shied away from allowing all possible fusions to exist, as noted already. Since the bottom element of a lattice is the empty join, we can put the point like this: classical mereologists are ontologically conservative about empty joins, and ontologically permissive about non-empty joins. As Tarski pointed out long ago, the principles of classical mereology thus yield a boolean algebra, with the bottom element removed \addcite{}.
 
 But it is difficult to see the motivation here. On the one hand, if you want to be ontologically conservative, then why allow so many fusions? If we are going to be suspicious of an empty join, then wouldn't we also be suspicious of the fusion of (say) Dion's left hand and right knee? Conversely, if we are happy to admit the existence of entities like the fusion of Dion's left hand and right knee, then why not an empty join? 
 
 One way to diagnose the problem is to say that we, as classical mereologists, have confused the algebra of parts with the integrity of the wholes. We have defined the algebra of parts in a combinatorial way, but then at the same time, we tried to make that algebra do ontological work. But this inevitably pulls us in two directions. So, we end up letting the algebraic aspects of our parthood relation do ontological work (creating any fusion whatever), until it goes too far (e.g. the null element), at which point we try to pull back on the ontological reigns.
 
-For another point of tension, consider extensionality. The classicist's axiom says if $x$ and $y$ have the same parts, then $x$ = $y$. This is ontologically conservative: ``no difference without a difference maker'' (TODO cite Lewis). However, this flattens all structure, and so it judges that ``tip'' and ``pit'' cannot be different words, since they have the same parts, after flattening. But that of course feels wrong. These two words have a different ordering of letters, so why would we neglect that in determining their identity? Here too we don't want the combinatorics to do any ontological work, even though we're happy to let the join operation freely generate entities.
+For another point of tension, consider extensionality. The classicist's axiom says if $x$ and $y$ have the same parts, then $x$ = $y$. This is ontologically conservative: ``no difference without a difference maker'' \addcite{Lewis}. However, this flattens all structure, and so it judges that ``tip'' and ``pit'' cannot be different words, since they have the same parts, after flattening. But that of course feels wrong. These two words have a different ordering of letters, so why would we neglect that in determining their identity? Here too we don't want the combinatorics to do any ontological work, even though we're happy to let the join operation freely generate entities.
 
 We can free ourselves from these sorts of tensions if we separate the algebra of parts from the integrity or gluing of the parts. Let us think of the lattice of parts merely as the abstract ``parts space,'' i.e., as the set of all \emph{possible} combinations of the given parts into larger pieces. Moreover, let us be clear that this does not do any ontological work. A ``parts space'' is just an abstract description of the various combinations of parts that could be. Think of it as a kind of mold that has slots that could be filled in with actual pieces. To specify an \emph{actual} part-whole complex that occupies that parts space, we need to take a second step and fill in certain of those slots with actual stuff, and specify which of those pieces glue together into bigger pieces. 
 
@@ -306,15 +306,15 @@ The literature on mereology is vast. What we might think of as formal mereology 
 
 Topological concepts have been used in mereology for a long time (see the historical coverage and discussion in \cite{Simons:1987}). So-called ``mereotopology'' explicitly aims to characterize mereological questions in topological ways, especially using notions like boundaries, interiors, and connectedness. A standard introduction to modern mereotopology is \cite{CasatiAndVarzi:1999}.
 
-However, despite its heavy reliance on topology, mereotopology has not (to our knowledge) utilized sheaf-theory in any significant way (nor has classical mereology). TODO: discuss Spivak's behavioral mereology/temporal type theory (\cite{FongMyersAndSpivak:2020}, \cite{SchultzAndSpivak:2019}), Moltmann's trope sheaves, Moltmann's mereology.
+However, despite its heavy reliance on topology, mereotopology has not (to our knowledge) utilized sheaf-theory in any significant way (nor has classical mereology). \todo{discuss Spivak's behavioral mereology/temporal type theory} (\cite{FongMyersAndSpivak:2020}, \cite{SchultzAndSpivak:2019}), Moltmann's trope sheaves, Moltmann's mereology.
 
 For sheaves, see \cite{Tennison:1975}, \cite{MacLaneAndMoerdijk:1994}, \cite{Rosiak:2022}, or \cite{Wedhorn:2016}. For locales, see \cite{Johnstone:1982}, \cite{Vickers:1989}, \cite{Vickers:2007}, \cite{PicadoAndPultr:2012}.
 
-For toposes, see \cite{Goldblatt:1984}, \cite{McLarty:1992}, \cite{Borceux:1994}, \cite{MacLaneAndMoerdijk:1994}, \cite{LawvereAndSchanuel:1997}. TODO: discuss the idea of ``deriving'' the logic from the underlying structure, rather than ``inventing'' it axiomatically. Perhaps Moltmann's mereology is to be cited here.
+For toposes, see \cite{Goldblatt:1984}, \cite{McLarty:1992}, \cite{Borceux:1994}, \cite{MacLaneAndMoerdijk:1994}, \cite{LawvereAndSchanuel:1997}. \todo{discuss the idea of ``deriving'' the logic from the underlying structure, rather than ``inventing'' it axiomatically. Perhaps Moltmann's mereology is to be cited here.}
 
-TODO: discuss how mereological concepts are used in certain ``fusion-first'' approaches, e.g., Peter Simons and using ``connectedness.'' Discuss Van Inwagen's special composition question (\cite{VanInwagen:1990}). 
+\todo{discuss how mereological concepts are used in certain ``fusion-first'' approaches, e.g., Peter Simons and using ``connectedness.'' Discuss Van Inwagen's special composition question (\cite{VanInwagen:1990}).}
 
-TODO: discuss non-boolean approaches. Discuss boolean algebra stuff from Protow, the survey ``Logic in Heyting Algebras,''  Moltmann's Heyting mereology.
+\todo{discuss non-boolean approaches. Discuss boolean algebra stuff from Protow, the survey ``Logic in Heyting Algebras,''  Moltmann's Heyting mereology.}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -446,5 +446,8 @@ The plan of this paper is as follows.
 %\isPreprints{}{% This command is only used for ``preprints''.
 \end{adjustwidth}
 %} % If the paper is ``preprints'', please uncomment this parenthesis.
+
+\listoftodos
+
 \end{document}
 
