--- a/submission-part-2.tex
+++ b/submission-part-2.tex
@@ -3920,7 +3920,7 @@ We need to check that this is a $j$-operator.
 
 We check (J1)--(J3) from the definition.
 
-TODO. Do the base case, then the inductive step. \qedhere
+\todo{Do the base case, then the inductive step.} \qedhere
 
 \end{proof}
 
@@ -4174,7 +4174,7 @@ In this section, we provide a discussion of what classical notions of mereology 
 
 \item \emph{Reflexivity, antisymmetry, and transitivity}. These are guaranteed. Locally, of course, you may not have transitivity. But globally, it's a theorem. [Check that.]
 
-\item \emph{Distributivity}. TODO: do the glued sections of a sheaf have to be distrubitive? Only inside what glues (since we glue pairwise, so every $i \join/ j$ of the cover.
+\item \emph{Distributivity}. \todo{do the glued sections of a sheaf have to be distrubitive? Only inside what glues (since we glue pairwise, so every $i \join/ j$ of the cover.}
 
 \item \emph{An empty element}. There is a need for a bottom element in the \emph{algebra} of parts, but a sheaf need not contain any such thing. There is no need here to try and construct awkward mathematical structures that do algebra on parts but yet don't have a bottom element because our ontological intuitions tell us there can be no such thing. That confuses two issues: algebra and integrity. So here we separate those cleanly, and the algebra can do algebra while the sheaf can do integrity. [In a sheaf you CAN'T assign an empty element to bottom, for coherence, so the bottom element is special...need to say more about that and figure it out.]
 
@@ -4184,11 +4184,11 @@ In this section, we provide a discussion of what classical notions of mereology 
 
 \item \emph{Extensionality}. Classical mereology's notion of extensionality essentially flattens any structure and is thus overly aggressive. This is why extensionality is so controversial. The sheaf-theoretic perspective retains extensionality, but is much more nuanced. [Here too, I suspect that mereological discussions of extensionality have confused the algebra of parts and the integrity of wholes.]
 
-\item \emph{Gunk and atoms}. You can model continuity and gunky parts if you so desire. You just need a sober space to do it. TODO: check that we can model continuity in the locale in this way. TODO: can you do continuity only in the sheaf data, without an underlying continuous decompositon in the locale? I would think that if you can't infinitely decompose into smaller opens around a point in the locale, you couldn't do such a thing in the sheaf data?
+\item \emph{Gunk and atoms}. You can model continuity and gunky parts if you so desire. You just need a sober space to do it. \todo{check that we can model continuity in the locale in this way.} \todo{can you do continuity only in the sheaf data, without an underlying continuous decompositon in the locale? I would think that if you can't infinitely decompose into smaller opens around a point in the locale, you couldn't do such a thing in the sheaf data?}
 
-\item \emph{Priority of wholes}. The framework is agnostic as to whether you take an  Aristotelian-Thomistic approach (TODO: cite Aquinas, Arlig, and that guy who wrote that recent book defending the Aristotelian view). 
+\item \emph{Priority of wholes}. The framework is agnostic as to whether you take an  Aristotelian-Thomistic approach\addcite{Aquinas, Arlig, and that guy who wrote that recent book defending the Aristotelian view}.
 
-\item \emph{The whole is greater than its parts}. The framework is agnostic as to whether you want to be a Scotist and say that the whole is something over and above its parts (cite Cross) or an Ockhamist who says it is not (TODO: cite Normore, Arlig). 
+\item \emph{The whole is greater than its parts}. The framework is agnostic as to whether you want to be a Scotist and say that the whole is something over and above its parts (cite Cross) or an Ockhamist who says it is not\addcite{Normore, Arlig}.
 
 \end{itemize}
 
@@ -4247,5 +4247,8 @@ In this section, we provide a discussion of what classical notions of mereology 
 %\isPreprints{}{% This command is only used for ``preprints''.
 \end{adjustwidth}
 %} % If the paper is ``preprints'', please uncomment this parenthesis.
+
+\listoftodos
+
 \end{document}
 
