--- a/submission-part-3.tex
+++ b/submission-part-3.tex
@@ -899,7 +899,7 @@ TODO.
 \subsection{Exponentials}
 
 \noindent
-TODO? I think the fibrational setting is easier to describe. Maybe do that instead.
+\todo{I think the fibrational setting is easier to describe. Maybe do that instead.}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -2368,7 +2368,7 @@ In general, each of the connective operations can be defined as the characterist
 
 These operations impose a Heyting algebra structure on $\Omega$: there are operations that correspond to top, bottom, join (''$or$''), meet (''$and$''), complement (``$\lnot$''), and so on. This of course is also the case for the operations with set-based logic, except that the algebraic structure of the logic is Heyting (intuitionistic) for toposes in general, and not Boolean (although there are toposes that are Boolean).
 
-In the rest of this section, we will describe some of these operations. For further details, see for instance \cite[pp. TODO: find the pages (chapter 6, I think)]{Goldblatt:1984} or \cite[pp. 349--352]{Borceux:1994}.
+In the rest of this section, we will describe some of these operations. For further details, see for instance \cite[pp. \todo{find the pages (chapter 6, I think)}]{Goldblatt:1984} or \cite[pp. 349--352]{Borceux:1994}.
 
 
 % ----------------------------------------
@@ -2514,10 +2514,7 @@ The graph example from \cref{sec:extended-subobject-example} offers an example o
 \subsection{Quantifiers}
 
 \noindent
-TODO
-
-I still think I should be doing this from the fibrational perspective. Quantifiers are way easier to understand that way. Can we get away with not discussing quantifiers at all?
-
+\todo{I still think I should be doing this from the fibrational perspective. Quantifiers are way easier to understand that way. Can we get away with not discussing quantifiers at all?}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{The Internal Language of the Topos}
@@ -2543,7 +2540,7 @@ TODO
 \subsection{Parts and Wholes, Logically}
 
 \noindent
-TODO: define wholes in the internal language, and define the parthood relation in the internal language. Formulate some definitions like overlap.
+\todo{define wholes in the internal language, and define the parthood relation in the internal language. Formulate some definitions like overlap.}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -2554,7 +2551,7 @@ TODO: define wholes in the internal language, and define the parthood relation i
 \label{sec:mereology-logics}
 
 \noindent
-TODO: prove some theorems like reflexivity, antisymmetry, and transitivity. discuss supplementation? extensionality? atoms?
+\todo{prove some theorems like reflexivity, antisymmetry, and transitivity. discuss supplementation? extensionality? atoms?}
 
 
 
@@ -2611,5 +2608,8 @@ TODO: prove some theorems like reflexivity, antisymmetry, and transitivity. disc
 %\isPreprints{}{% This command is only used for ``preprints''.
 \end{adjustwidth}
 %} % If the paper is ``preprints'', please uncomment this parenthesis.
+
+\listoftodos
+
 \end{document}
 
