Nitpick the definition of "complete lattice"
I would expect "complete" with no further qualification to require
arbitrary meets, which a locale does not require.

--- a/submission-part-1.tex
+++ b/submission-part-1.tex
@@ -247,7 +247,7 @@ Fortunately, a ``fusions-first'' approach need not be as doomed as it may seem. 
 
 To begin, we want to suggest that it is useful to draw a distinction between what one might call the algebra of parts on the one hand, and the integrity or gluing-together of the parts on the other. To get a sense of what this distinction means, and why it is useful, fix a part-whole complex to analyze (a statue of Dion, let's say), and let an enumeration of its parts be given. The classical principle of unrestricted fusion says that any combination of those parts glues into a fusion. In essence, this generates all possible combinations of parts. As such, it nearly yields a complete lattice, with overlap and underlap serving as the meet and join operators. 
 
-However, it only \emph{nearly} yields a complete lattice because mereologists have been relunctant to allow a bottom element. Since mereologists are ontologists, they find a null element to be ontologically suspect. And indeed, what could an empty thing that is part of all other things possibly \emph{be}? So, instead of admitting it into their mereological systems, classical mereologists have simply omitted it altogether. David Lewis (\cite{Lewis:1991}) even went so far as to formulate a version of set theory that had no empty set. 
+However, it only \emph{nearly} yields a lattice because mereologists have been relunctant to allow a bottom element. Since mereologists are ontologists, they find a null element to be ontologically suspect. And indeed, what could an empty thing that is part of all other things possibly \emph{be}? So, instead of admitting it into their mereological systems, classical mereologists have simply omitted it altogether. David Lewis (\cite{Lewis:1991}) even went so far as to formulate a version of set theory that had no empty set.
 
 Yet despite their suspicion of a null element, classical mereologists have not shied away from allowing all possible fusions to exist, as noted already. Since the bottom element of a lattice is the empty join, we can put the point like this: classical mereologists are ontologically conservative about empty joins, and ontologically permissive about non-empty joins. As Tarski pointed out long ago, the principles of classical mereology thus yield a boolean algebra, with the bottom element removed \addcite{}.
 
