--- a/submission-part-2.tex
+++ b/submission-part-2.tex
@@ -427,7 +427,7 @@ These conditions encode the way that spatial regions are put together. For insta
 
 \begin{Remark}
 
-The regions of a topology form a complete lattice. T1 says that the lattice has a top ($\top$) and bottom ($\bottom/$), T2 says that for any selection of opens there is a join, and T3 says that for any finite selection of opens there is a meet.
+The regions of a topology form a (join-)complete lattice. T1 says that the lattice has a top ($\top$) and bottom ($\bottom/$), T2 says that for any selection of opens there is a join, and T3 says that for any finite selection of opens there is a meet.
 
 \end{Remark}
 
